# tracer

./: .gitignore  Cargo.toml  coordinator.js  package.json  scene.yml  serverless.yml
coordinator/: Cargo.toml
coordinator/src/: main.rs
libtrace/: Cargo.toml
libtrace/src/: aabb.rs  bvh.rs  camera.rs  hitable.rs  lib.rs  material.rs  perlin.rs  ppm.rs  ray.rs  rect.rs  renderer.rs  scene.rs  sphere.rs  texture.rs  vec3.rs
src/: main.rs  ppm.rs  vec3.rs
tracer/: Cargo.toml
tracer/src/: config.rs  main.rs
worker/: Cargo.toml
worker-shared/: Cargo.toml
worker-shared/src/: lib.rs
worker/src/: main.rs
