[package]
name = "coordinator"
version = "0.1.0"
authors = ["Nathan <nlincoln@intellifarms.com>"]
edition = "2018"

[dependencies]
libtrace = { path = "../libtrace" }
serde_json = "1.0"
serde_yaml = "0.8"
crossbeam-channel = "0.3"
worker-shared = { path = "../worker-shared" }
clap = "2.32"
png = "0.14"
indicatif = "0.11"
reqwest = "0.9"
itertools = "0.8"
