[package]
name = "tracer"
version = "0.1.0"
authors = ["Nathan <nlincoln@intellifarms.com>"]
edition = "2018"

[dependencies]
libtrace = { path = "../libtrace" }
rand = "0.5"
rayon = "1.0"
clap = "2.32"
png = "0.14"
indicatif = "0.11"
serde = { version = "1.0" }
serde_yaml = "0.8.8"
worker-shared = { path = "../worker-shared" }
