[package]
name = "worker"
version = "0.1.0"
authors = ["Nathan <nlincoln@intellifarms.com>"]
edition = "2018"

[dependencies]
libtrace = { path = "../libtrace" }
log = "0.4"
env_logger = "0.6"
lambda_runtime = "0.2"
lambda_http = "0.1"
serde_json = "1.0"
worker-shared = { path = "../worker-shared" }
rand = "0.5"
